<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Watch</string>
    <string name="app_id">1384401078477660</string>
    <string name="mediatek">Mediatek inc.</string>
    <string name="release_date">Release date</string>
    <string name="version">Version</string>
    <string name="date">2015.05.20</string>
    <string name="commit">Commit</string>
    <string name="start">Start</string>
    <string name="str_mtksmartdevice">MTK SmartDevice</string>
    <string name="str_mtksmartwatch">MTK smartwatch</string>
    <string name="cannot_scan">Cannot scan</string>
    <string name="scan_pre">Scan</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="ble_not_supported">BLE is not supported in the Smart Phone</string>
    <string name="error_bluetooth_not_supported">Bluetooth not support</string>
    <string name="connect_fail">SmartDevice connect fail</string>
    <string name="add_watch_hint">Tap the watch image to connect it with your smart phone</string>
    <string name="pls_switch_bt_on">"Please switch on Bluetooth"</string>
    <string name="unknown_device">Unknown device</string>
    <string name="connect_error">Connect Error</string>
    <string name="no_connect">Smart Device is not connected</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="switch_mode_spp">Switch Mode (SPP)</string>
    <string name="switch_mode_dogp">Switch Mode (GATT)</string>
    <string name="cannot_switch_mode">Cannot switch mode</string>
    <string name="device_info">Device Info</string>
    <string name="change_name_pre">Change Name</string>
    <string name="change_name">Change Device Name</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnecting">Disconnecting...\nTake some time when data is transmitting</string>
    <string name="disconnect_dialog_title">Disconnect connection</string>
    <string name="disconnect_dialog_message">Would you like to disconnect SmartDevice?</string>
    <string name="shake_hand_fail">Please check your remote device</string>
    <string name="device">MY DEVICE</string>
    <string name="smart_accessory_application">APPS AND SETTINGS</string>
    <string name="select_blocks_activity">Select apps to unblock</string>
    <string name="find_me_button">Locate Watch</string>
    <string name="find_me_using">Stop</string>
    <string name="alert_setting">Alert</string>
    <string name="city_search_error">search city failed</string>
    <string name="temp_unit">Temperature units</string>
    <string name="city">City</string>
    <string name="choose_city">Choose City</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="no_city">No City (Edit to Set City)</string>
    <string name="current_city">Current City is :<xliff:g id="city">%s</xliff:g> (Edit to Change City)</string>
    <string name="about">About</string>
    <string name="about_tittle">About MTK smart device manager</string>
    <string name="manufacture">Manufacturer</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_content">Would you like to uninstall this app?</string>
    <string name="install_hint">Please Install</string>
    <string name="install_background">Some App installing in the background, it may take a few minutes, please wait</string>
    <string name="install_done">Install Done</string>
    <string name="pre_install">Pre-installed in wearable device</string>
    <string name="uninstall_hint">Doesn\'t exist in local, please uninstall</string>
    <string name="launch_app">Click to Launch</string>
    <string name="notifications">Notifications</string>
    <string name="install_application">Install application</string>
    <string name="installing">Installing</string>
    <string name="install_into">into your smart watch</string>
    <string name="warning_not_install">application not installed</string>
    <string name="launchfail">Load Application Failed</string>
    <string name="reachmax">Maximum downloading amount reached.</string>
    <string name="download_fail">Failed to download</string>
    <string name="file_lost">install failed, some files lost, please check.</string>
    <string name="install">Install</string>
    <string name="update">Update</string>
    <string name="installing_hint">Installing...</string>
    <string name="downloading_hint">Downloading...</string>
    <string name="app_store">Smart device APP store</string>
    <string name="uninstall_allvxp">Uninstall All VXP Items</string>
    <string name="take_mins">"it may take a few minutes, please wait"</string>
    <string name="try_later">Please try later</string>
    <string name="test">Test notifications</string>
    <string name="install_fail">Install fail</string>
    <string name="install_fail_code"><xliff:g id="appname">%s</xliff:g> install failed, <xliff:g id="error">%s</xliff:g>. Deleting VXPs in watch.</string>
    <string name="install_code_success">success</string>
    <string name="install_code_error">unknown error</string>
    <string name="install_code_error1">the parameter app_path is NULL</string>
    <string name="install_code_error2">reach max installed app number</string>
    <string name="install_code_error3">get app name tag error</string>
    <string name="install_code_error4">alloc memory from engine fail</string>
    <string name="install_code_error5">shortcut already installed</string>
    <string name="install_code_error6">get shortcut installed info file fail</string>
    <string name="install_code_error7">app already installed</string>
    <string name="install_code_error8">get icon tag or app name tag fail</string>
    <string name="install_code_error9">write installed info for build-in app fail</string>
    <string name="install_code_error10">save icon fail</string>
    <string name="install_code_error11">save installed info for vxp install fail</string>
    <string name="app_list">My Applications</string>
    <string name="sms_preference_title">SMS service</string>
    <string name="call_preference_title">Call service</string>
    <string name="accessibility_prompt_title">Enable Accessibility</string>
    <string name="accessibility_prompt_content">BTNotification is required to send applications\' notifications to your remote device. Press "OK" to go to the Accessibility settings to activate it.</string>
    <string name="notificationlistener_prompt_title">Enable Notification</string>
    <string name="notificationlistener_prompt_content">Mediatek SmartDevice is required to send applications\' notifications to your remote device. Press "OK" to go to the Notification access settings to activate it.</string>
    <string name="progress_dialog_title">Loading</string>
    <string name="progress_dialog_message">Please wait&#8230;</string>
    <string name="save_successfully">Saved successfully</string>
    <string name="personal_apps_title">Personal app</string>
    <string name="system_apps_title">System app</string>
    <string name="button_save">Save</string>
    <string name="button_select_all">Select All</string>
    <string name="button_deselect_all">Unselect All</string>
    <string name="button_unblock">Unblock</string>
    <string name="notification_ticker_text">BTNotification connected remote device</string>
    <string name="notification_ticker_battery">SmartDevice battery capacity: %1$d%%</string>
    <string name="notification_title">Watch</string>
    <string name="notification_content">SmartDevice Connected</string>
    <string name="missed_call">Missed Call</string>
    <string name="accessibility_description">Active notification service in your accessibility setting. This allows BT notification to push application notification to remote device.</string>
    <string name="batterylow">Battery low</string>
    <string name="pleaseconnectcharger">The battery is getting low,Please connect charger, Capacity</string>
    <string name="str_searching">Searching</string>
    <string name="str_send">send</string>
    <string name="music">Music</string>
    <string name="none">None</string>
    <string name="write_config_not_done">Writing app config</string>
    <string name="notification_action_open">Open</string>
    <string name="smart_device_firmware">Smart device firmware</string>
    <string name="smart_device_tittle">CURRENT FIRMWARE</string>
    <string name="menu_item_manager">Smart device manager</string>
    <string name="manufacture_title">Manufacture</string>
    <string name="version_title">Version</string>
    <string name="check_new_version">Check new version</string>
    <string name="updating_firmware">Updating firmware to smart device. Please wait.</string>
    <string name="no_update">The version is the latest.</string>
    <string name="updated_firmware">Updated finished. Enjoy your new smart device.</string>
    <string name="check_sucess_message">New version already.</string>
    <string name="check_fail_message">Checking new version failed. Please try later</string>
    <string name="check_network_message">Connected to server has been lost, check your network and try again</string>
    <string name="new_version_update">New version available Update ?</string>
    <string name="connect_to_bt">Please Connect your phone and smart device via Bluetooth first.</string>
    <string name="usb_firmware_note">Note:</string>
    <string name="usb_firmware_information">Please ensure your smart device and phone is connected by USB cable. And do not disconnect them until firmware updating finished.</string>
    <string name="new_version_text">New version :</string>
    <string name="release_date_text">Release date:</string>
    <string name="update_text">Update</string>
    <string name="update_via_usb_first_text">Please connect your phone and smart device via USB cable first.</string>
    <string name="updating_firmware_via_usb_text">Updating firmware to smart device. Please wait and ensure smart device and phone is connected via USB cable.</string>
    <string name="current_state_text">Current state : </string>
    <string name="unziping_text">Preparing!\r\nPlease wait for a moment!</string>
    <string name="unzip_image_finished_text">UnZip finished!</string>
    <string name="main_menu_ringing">Ringing\u2026</string>
    <string name="log_start">Catch Remote Device Log (start)</string>
    <string name="uv">UV</string>
    <string name="syncdata">Sync Data</string>
    <string name="history">History</string>
    <string name="query">Query</string>
    <string name="tips_uv">TIP:</string>
    <string name="content_uv1">Weak Radiation \nSPF 12-15 \nPA+</string>
    <string name="upload_data">Upload Data</string>
    <string name="download_data">Download Data</string>
    <string name="step">STEP</string>
    <string name="distance">DISTANCE</string>
    <string name="burn">BURN</string>
    <string name="tips_no_data">No Data</string>
    <string name="save_string">保存</string>
    <string name="switch_on_string">开启</string>
    <string name="switch_off_string">关闭</string>
    <string name="fence">电子围栏</string>
    <string name="fence_name1">家</string>
    <string name="fence_name2">奶奶家</string>
    <string name="fence_name3">姥姥家</string>
    <string name="fence_name4">学校</string>
    <string name="fence_name5">辅导班</string>
    <string name="fence_name6">老师家</string>
    <string name="mine">我的设备:</string>
    <string name="share_to_me">他人分享的设备:</string>
    <string name="feedback_text1">意见反馈:</string>
    <string name="feedback_text2">服务电话(9:00-18:00):400 0815 375</string>
    <string name="feedback_button_text">提交</string>
    <string name="feedback_hint1">请输入您的反馈内容</string>
    <string name="setting_text11">上课防打扰开关</string>
    <string name="long_click_unbond">(长按解绑宝贝)</string>
</resources>