<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_tittle"
        android:visibility="gone"
        android:padding="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manufacture"
        android:visibility="gone"
        android:textStyle="bold"
        android:paddingTop="20dp" 
        android:paddingLeft="20dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mediatek" 
        android:visibility="gone"
        android:paddingLeft="20dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textStyle="bold" 
        android:paddingTop="20dp" 
        android:paddingLeft="20dp"/>

    <TextView
        android:id="@+id/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:textStyle="bold" 
        android:paddingTop="20dp" 
        android:paddingLeft="20dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/date" />

     <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test" />

     <Button
        android:id="@+id/log_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_start"
        android:visibility="gone"/>
</LinearLayout>
