<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/activity_fence_add"
    android:scrollbars="none" 
    android:orientation="vertical"
    android:weightSum="11"
    >
   	<TextView 
   	    android:layout_width="match_parent"
    	android:layout_height="40dp"
    	android:gravity="center"
    	android:text="@string/fence"
    	android:textSize="18sp"
    	android:textColor="@color/register_edit_bg"
   	    />
	<View 
   	    android:layout_width="match_parent"
    	android:layout_height="1dp"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:background="@color/register_edit_bg"
   	    />
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
        >
        <LinearLayout 
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
            >
            <Button 
                android:id="@+id/home1"
                android:layout_weight="3"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/fence_name1"
    			android:background="@color/register_edit_bg"
                />
            <Button 
                android:id="@+id/home2"
                android:layout_weight="3"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/fence_name2"
    			android:background="@color/register_edit_bg"
                />
            <Button 
                android:id="@+id/home3"
                android:layout_weight="3"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/fence_name3"
    			android:background="@color/register_edit_bg"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
            >
            <Button 
                android:id="@+id/home4"
                android:layout_weight="3"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/fence_name4"
    			android:background="@color/register_edit_bg"
                />
            <Button 
                android:id="@+id/home5"
                android:layout_weight="3"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/fence_name5"
    			android:background="@color/register_edit_bg"
                />
            <Button 
                android:id="@+id/home6"
                android:layout_weight="3"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/fence_name6"
    			android:background="@color/register_edit_bg"
                />
        </LinearLayout>
    </LinearLayout>
    <EditText
        android:id="@+id/fence_name_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        />
    </LinearLayout>


