<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/title_height"
    android:orientation="vertical"
    android:background="@drawable/bg_title">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/syncdata"
        android:textSize="25sp" />
    </LinearLayout>

 <Button
     android:id="@+id/upload_data"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
     android:layout_marginTop="30dp"
     android:text="@string/upload_data" />

 <Button
     android:id="@+id/download_data"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
     android:layout_marginTop="20dp"
     android:text="@string/download_data" />

</LinearLayout>
