<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/title_height"
    android:orientation="vertical"
    android:background="@drawable/bg_title">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/uv"
        android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageView
            android:id="@+id/index"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:src="@drawable/uv_01" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/title_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/tips_uv"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/tips_uv"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/content_uv1"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>
