<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <include layout="@layout/head_public"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/long_click_unbond"
                android:textColor="@color/color_gray"
                />
            <ListView
                android:id="@+id/baobei_manager_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/color_gray"
                android:scrollbars="none" >
            </ListView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_to_me"
                />
            <ListView
                android:id="@+id/other_share_manager_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/color_gray"
                android:scrollbars="none" >
            </ListView>
        </LinearLayout>
    </LinearLayout>
    <include
        android:id="@+id/progress_bar"
        layout="@layout/progress_bar"
        />
</RelativeLayout>
